커뮤니티와 공지글 나누기 일단 완료